GUI alterado2